<resources>
    <string name="app_name">CollegeCU</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="about">Atal Bihari Vajpayee Government Institute of Engineering and Technology was established in 10 april 2011.\n
        It is the Second State Government institute of Himachal Pradesh which is located at Pragatinagar Village Gumma, Teh. Kotkhai, Distt.Shimla on the bank of river Giri Ganga about 60 km from Shimla on Shimla Rohru National Highway. Presently three disciplines has beenrunning under the same roof i.e B.Tech., Polytechnic and I.T.I. B.Tech presently running two courses i.e Computer Science and Engineering and Electronics and Communication Engineering each with the intake of 63 students. Polytechnic presently offers three courses i.e Computer Engineering , Electronics and Communication Engg. and Electrical Engg. each with the intake of 40 students. I.T.I ispresently running four courses i.e Electrical, Electronics, Fitter and Motor Vehicle Mechanic each with the intake of 21 students.The Government of Himachal Pradesh has notified to establish Atal Bihari Vajpayee Government Institute of Engineering and TechnologyPragatinagar vide Notification No. EDN (TE) A (6)-1/2009 dated 14.03.2011.The foundation stone of the Institute was laid by Hon\'bleChief Minister of Himachal Pradesh on 10th April 2011.\n This Institution is located at Pragatinagar on the bank of river Giri Ganga about61 km from Shimla on Shimla Rohru National Highway. On the other bank of the river Cricket Stadium is situated. The campus is spread over123.4 Bighas of lush green land and surrounded by beautiful green Apple Valley. The environment is most suitable for teaching, learningprocess. Under this Institute B.Tech programme, Diploma programme and Certificate programme has been proposed. Three programmes namelyElectrical Engineering,Electronics and Communication Engineering and Computer Engineering with the intake of 40 students in each trade in Polytechnic isrunning from the session 2011-12 and I.T.I. with the intake of 21 students in each trade of Electrician, Electronics and Fitter Tradeis running under NCVT Scheme. The NCVT has approved these programmes on dated: 25/9/2012. One more programme in Mechanic motor vehiclehas been started from the session 2012-13 under SCVT. The B.Tech (Degree programme) has been started with two disciplines namely Electronics and Communication Engineering and Computer Science and Engineering with the intake of 40 students in each trade from session2012-13 as constituent college of HP Technical University Hamirpur.\n

A.B.V.G.I.E.T Pragatinagar offers you an opportunity to dedicate yourself as a qualified professional to the development of the nation and alleviation of sufferings of humanity. Our main objective is to teach, train and prepare the students to a level where they can handle any situation independently to achieve higher degree of excellence in professionalism. The Institute has a well qualified, experienced and dedicated faculty. The highly pragmatic and progressive environment developed by the talented faculty is conducive for the development of learning, empowerment of knowledge and skill enhancement.

</string>
    <string name="home">Atal Bihari Vajpayee Government Institute of Engineering and Technology was established in 10 april 2011. It is the Second Government Regional Engineering institute of Himachal Pradesh which is located at Pragatinagar Village Gumma, Teh. Kotkhai, Distt. Shimla on the bank of river Giri Ganga about 60 km from Shimla on Shimla Rohru National Highway. Presently three disciplines has been running under the same roof i.e B.Tech., Polytechnic and I.T.I. B.Tech presently running two courses i.e Computer Science &amp; Engineering and Electronics &amp; Communication Engineering each with the intake of 63 students. Polytechnic presently offers three courses i.e Computer Engineering , Electronics &amp; Communication Engg. and Electrical Engg. each with the intake of 40 students. I.T.I is presently running four courses i.e Electrical, Electronics, Fitter and Motor Vehicle Mechanic each with the intake of 21 students.</string>
    <string name="existing_user_log_in_here">Existing User? Log In Here</string>
    <string name="forgot_password_click_here">Forgot password? Click here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="university_roll_no">University Roll No.</string>
    <string name="abvgietian_s_nlogin_page">ABVGIETian\'s\nLogin Page</string>
    <string name="departments">Departments</string>
    <string name="contact_details">Contact Details</string>

    <string name="computer_science">Computer Science</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_abvgiet_nregister_here">Welcome to ABVGIET\nRegister Here</string>
    <string name="name">  Name</string>
    <string name="we_learn_from_failure_not_from_success_bram_stoker">“We learn from failure, not from success!”― Bram Stoker. ...</string>
    <string name="to_be_a_premier_institution_in_technical_education_and_research_catering_changing_needs_of_the_society">To be a premier institution in technical education and research catering changing needs of the society.</string>
    <string name="the_department_of_computer_science_is_established_in_2012_the_department_of_computer_science_and_engineering_is_a_pioneering_academic_centre_for_education_at_undergraduate_level_the_computer_science_and_engineering_department_of_our_college_holds_prominent_position_in_the_degree_programme_as_it_constently_favours_encouragement_of_students_to_diversify_their_perspective_laboratories_of_the_department_are_equipped_with_state_of_the_art_infrastructure_to_cater_course_work_and_research_activities_this_department_of_abvgiet_continously_trains_students_to_be_self_motivated_computer_science_engineer_with_a_very_high_moral_the_main_objective_of_the_department_is_to_prepare_students_for_software_technology_industry_educational_institutions_and_research_organizations_this_department_witholds_48_seats_for_every_batch_involving_a_team_of_07_dedicated_faculty_members_one_lab_technitions"><![CDATA[The Department of Computer Science is established in 2012. The department of Computer Science and Engineering is a pioneering academic centre for education at undergraduate level. The Computer Science and Engineering department of our college holds prominent position in the degree programme as it constently favours encouragement of students to diversify their perspective. Laboratories of the department are equipped with state of the art infrastructure to cater course work and research activities. This department of ABVGIET continously trains students to be self-motivated Computer Science Engineer with a very high moral. The main objective of the department is to prepare students for software technology, industry, educational institutions and research organizations. This department witholds 48 seats for every batch involving a team of 07 dedicated faculty members & one Lab Technitions.]]></string>
</resources>