<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPages.SignUpActivity"
    android:background="#fff"
    android:orientation="vertical">
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:ignore="UselessParent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:background="@drawable/atal1"
      android:orientation="horizontal"
      android:gravity="center"
      >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginTop="60dp"
          android:gravity="center"
          android:padding="8dp"
          android:text="@string/welcome_to_abvgiet_nregister_here"
          android:textStyle="italic|bold"
          android:textColor="#E9E7EC"
          android:textSize="30sp"
          app:drawableRightCompat="@drawable/signup" />


  </LinearLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#00BCD4"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="-50dp"
        app:cardElevation="20dp"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rollno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6D5D5"
            android:hint="@string/university_roll_no"
            android:textIsSelectable="true"
            android:textSize="22sp"
            android:inputType="text"
            android:padding="2dp"
            android:drawableStart="@drawable/collegeroll"
            tools:ignore="VisualLintTextFieldSize" />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6D5D5"
            android:drawableStart="@drawable/user"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="3dp"
            android:textIsSelectable="true"
            android:textColorHint="#00838F"
            android:textSize="20sp"
            tools:ignore="VisualLintTextFieldSize" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6D5D5"
            android:drawableStart="@drawable/email"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:textIsSelectable="true"
            android:padding="2dp"
            android:textColorHint="#00838F"
            android:textSize="22sp"
            tools:ignore="HardcodedText,VisualLintTextFieldSize" />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6D5D5"
            android:hint="@string/password"
            android:drawableStart="@drawable/passwordicon"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:textIsSelectable="true"
            android:padding="2dp"
            tools:ignore="VisualLintTextFieldSize" />
      </com.google.android.material.textfield.TextInputLayout>


      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/registerbtn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_margin="20dp"
          android:text="Register"
          android:textAllCaps="false"
          android:background="@drawable/signupbg"
          tools:ignore="HardcodedText" />
    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_margin="10dp"
          android:layout_marginTop="10dp"
          android:padding="5dp"
          android:text="@string/we_learn_from_failure_not_from_success_bram_stoker"
          android:textColor="#DD2C00"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/copyrightTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_margin="10dp"
          android:text="@string/app_copyright"
          android:textColor="#757575"
          android:textSize="12sp" />
    </LinearLayout>
  </ScrollView>
</LinearLayout>